200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=331&leg=2012

--- a/www.cdep.ro/3b941fc991923b4ca4f947cf8cb59dd9da5f12c7.html
+++ b/www.cdep.ro/3b941fc991923b4ca4f947cf8cb59dd9da5f12c7.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Sefer_Cristian_George.jpg" border=0 width="150" alt="Cristian-George Sefer">
+<a href="/parlamentari/l2012/mari/Sefer_Cristian_George.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Sefer_Cristian_George.jpg" border=0 width="150" alt="Cristian-George Sefer"></a>
 <br>b.  17 mar. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cristian-George SEFER</h1>
 <div class="page-actions">
