200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=336&leg=2012

--- a/www.cdep.ro/b36f8b55d9cc0a487ad9febfcd008029df46bcdb.html
+++ b/www.cdep.ro/b36f8b55d9cc0a487ad9febfcd008029df46bcdb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/SmarandacheMironAlexandru.jpg" border=0 width="150" alt="Miron Alexandru Smarandache">
+<a href="/parlamentari/l2012/mari/SmarandacheMironAlexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SmarandacheMironAlexandru.jpg" border=0 width="150" alt="Miron Alexandru Smarandache"></a>
 <br>b.  17 mar. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Miron Alexandru SMARANDACHE</h1>
 <div class="page-actions">
