200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=346&leg=2012

--- a/www.cdep.ro/e6ef9cafb9910f5f6421a6ecd5c9780d94fe34b6.html
+++ b/www.cdep.ro/e6ef9cafb9910f5f6421a6ecd5c9780d94fe34b6.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SteriuValeriuAndrei.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SteriuValeriuAndrei.jpg" border=0 width="150" alt="Valeriu-Andrei Steriu"></a>
+<img src="/parlamentari/l2012/SteriuValeriuAndrei.jpg" border=0 width="150" alt="Valeriu-Andrei Steriu">
 <br>b.  24 sep. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Valeriu-Andrei STERIU</h1>
 <div class="page-actions">
