--- a/www.cdep.ro/133903ae5c0df21488390d38587d041b94d9f002.html
+++ b/www.cdep.ro/133903ae5c0df21488390d38587d041b94d9f002.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/StefanViorel.jpg" border=0 width="150" alt="Viorel ªtefan">
+<a href="/parlamentari/l2012/mari/StefanViorel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StefanViorel.jpg" border=0 width="150" alt="Viorel ªtefan"></a>
 <br>b.  26 jul. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Viorel ªTEFAN</h1>
 <div class="page-actions">
