--- a/www.cdep.ro/47066cdef391409f2a4fef1e10921b49a77cd548.html
+++ b/www.cdep.ro/47066cdef391409f2a4fef1e10921b49a77cd548.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TabuganIon.jpg" border=0 width="150" alt="Ion Tabugan">
+<a href="/parlamentari/l2012/mari/TabuganIon.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TabuganIon.jpg" border=0 width="150" alt="Ion Tabugan"></a>
 <br>b.  1 apr. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion TABUGAN</h1>
 <div class="page-actions">
