--- a/www.cdep.ro/e5e8482efb1ecc16aefd0048116861abf1cc3272.html
+++ b/www.cdep.ro/e5e8482efb1ecc16aefd0048116861abf1cc3272.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TanasescuClaudiuAndrei.jpg" border=0 width="150" alt="Claudiu-Andrei Tãnãsescu">
+<a href="/parlamentari/l2012/mari/TanasescuClaudiuAndrei.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TanasescuClaudiuAndrei.jpg" border=0 width="150" alt="Claudiu-Andrei Tãnãsescu"></a>
 <br>b.  11 feb. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Claudiu-Andrei TÃNÃSESCU</h1>
 <div class="page-actions">
