--- a/www.cdep.ro/60fe65633a7ba7ec9fae14df9e0bca14ad72afd2.html
+++ b/www.cdep.ro/60fe65633a7ba7ec9fae14df9e0bca14ad72afd2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TeodorescuIoanViorel.jpg" border=0 width="150" alt="Ioan Viorel Teodorescu">
+<a href="/parlamentari/l2012/mari/TeodorescuIoanViorel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TeodorescuIoanViorel.jpg" border=0 width="150" alt="Ioan Viorel Teodorescu"></a>
 <br>b.  8 apr. 1958
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan Viorel TEODORESCU</h1>
 <div class="page-actions">
