--- a/www.cdep.ro/9e544821e383fe2acb87a0538b32b266169572bd.html
+++ b/www.cdep.ro/9e544821e383fe2acb87a0538b32b266169572bd.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TilvarAngel.jpg" border=0 width="150" alt="Angel Tîlvãr">
+<a href="/parlamentari/l2012/mari/TilvarAngel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TilvarAngel.jpg" border=0 width="150" alt="Angel Tîlvãr"></a>
 <br>b.  11 feb. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Angel TÎLVÃR</h1>
 <div class="page-actions">
