--- a/www.cdep.ro/bdf53d09205138fb5fdc7d190fd7af15ad9f10d1.html
+++ b/www.cdep.ro/bdf53d09205138fb5fdc7d190fd7af15ad9f10d1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TocutDanLaurentiu.jpg" border=0 width="150" alt="Dan-Laurenþiu Tocuþ">
+<a href="/parlamentari/l2012/mari/TocutDanLaurentiu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TocutDanLaurentiu.jpg" border=0 width="150" alt="Dan-Laurenþiu Tocuþ"></a>
 <br>b.  1 oct. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan-Laurenþiu TOCUÞ</h1>
 <div class="page-actions">
