--- a/www.cdep.ro/2e085c9cf378c579542c708e679515b6cfca7f4b.html
+++ b/www.cdep.ro/2e085c9cf378c579542c708e679515b6cfca7f4b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Vainer_Aurel.jpg" border=0 width="150" alt="Aurel Vainer">
+<a href="/parlamentari/l2012/mari/Vainer_Aurel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Vainer_Aurel.jpg" border=0 width="150" alt="Aurel Vainer"></a>
 <br>b.  10 jan. 1932
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Aurel VAINER</h1>
 <div class="page-actions">
