--- a/www.cdep.ro/e3ed9a472c8733d37c00edfd1190d3dc8a9ec986.html
+++ b/www.cdep.ro/e3ed9a472c8733d37c00edfd1190d3dc8a9ec986.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Voicu_Madalin.jpg" border=0 width="150" alt="Mãdãlin-ªtefan Voicu">
+<a href="/parlamentari/l2012/mari/Voicu_Madalin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Voicu_Madalin.jpg" border=0 width="150" alt="Mãdãlin-ªtefan Voicu"></a>
 <br>b.  10 jul. 1952
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mãdãlin-ªtefan VOICU</h1>
 <div class="page-actions">
