200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=404&leg=2012

--- a/www.cdep.ro/65387dadd14949628b814d570286886aee4e2b2e.html
+++ b/www.cdep.ro/65387dadd14949628b814d570286886aee4e2b2e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Voicu_Mihai_Alexandru.jpg" border=0 width="150" alt="Mihai Alexandru Voicu">
+<a href="/parlamentari/l2012/mari/Voicu_Mihai_Alexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Voicu_Mihai_Alexandru.jpg" border=0 width="150" alt="Mihai Alexandru Voicu"></a>
 <br>b.  16 sep. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai Alexandru VOICU</h1>
 <div class="page-actions">
