200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=405&leg=2012

--- a/www.cdep.ro/c80004f7d960ee85b691a09f91df831ba7f93693.html
+++ b/www.cdep.ro/c80004f7d960ee85b691a09f91df831ba7f93693.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Vreme_Valerian.jpg" border=0 width="150" alt="Valerian Vreme">
+<a href="/parlamentari/l2012/mari/Vreme_Valerian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Vreme_Valerian.jpg" border=0 width="150" alt="Valerian Vreme"></a>
 <br>b.  13 jul. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Valerian VREME</h1>
 <div class="page-actions">
