--- a/www.cdep.ro/c251c22c64b5ee7deeb1804e742cdd757424ceaa.html
+++ b/www.cdep.ro/c251c22c64b5ee7deeb1804e742cdd757424ceaa.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Zamfir_Daniel_Catalin.jpg" border=0 width="150" alt="Daniel-Cãtãlin Zamfir">
+<a href="/parlamentari/l2012/mari/Zamfir_Daniel_Catalin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Zamfir_Daniel_Catalin.jpg" border=0 width="150" alt="Daniel-Cãtãlin Zamfir"></a>
 <br>b.  10 mar. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel-Cãtãlin ZAMFIR</h1>
 <div class="page-actions">
