200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=411&leg=2012

--- a/www.cdep.ro/3a63abbf1136b752e25706c47ce7940fdfa1a386.html
+++ b/www.cdep.ro/3a63abbf1136b752e25706c47ce7940fdfa1a386.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Zisopol_Dragos_Gabriel.jpg" border=0 width="150" alt="Dragoº Gabriel Zisopol">
+<a href="/parlamentari/l2012/mari/Zisopol_Dragos_Gabriel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Zisopol_Dragos_Gabriel.jpg" border=0 width="150" alt="Dragoº Gabriel Zisopol"></a>
 <br>b.  12 nov. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dragoº Gabriel ZISOPOL</h1>
 <div class="page-actions">
