200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=27&leg=2012

--- a/www.cdep.ro/6344e6dbce3b3eca68efdad178a9eb341fff3956.html
+++ b/www.cdep.ro/6344e6dbce3b3eca68efdad178a9eb341fff3956.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Becali_George.jpg" border=0 width="150" alt="George Becali">
+<a href="/parlamentari/l2012/mari/Becali_George.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Becali_George.jpg" border=0 width="150" alt="George Becali"></a>
 <br>b.  25 jun. 1958
 </div><div class="boxTitle"><h1 style="line-height: 110%;">George BECALI</h1>
 <div class="page-actions">
