--- a/www.cdep.ro/903f143cb6f211c233c9408631aab3e9a5b90188.html
+++ b/www.cdep.ro/903f143cb6f211c233c9408631aab3e9a5b90188.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Marcu_Nicu.jpg" border=0 width="150" alt="Nicu Marcu">
+<a href="/parlamentari/l2012/mari/Marcu_Nicu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Marcu_Nicu.jpg" border=0 width="150" alt="Nicu Marcu"></a>
 <br>b.  21 nov. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nicu MARCU</h1>
 <div class="page-actions">
