--- a/www.cdep.ro/73c713506b3af5ef2e1f66308030443b922cfd95.html
+++ b/www.cdep.ro/73c713506b3af5ef2e1f66308030443b922cfd95.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Niculescu_Oana.jpg" border=0 width="150" alt="Oana Niculescu-Mizil ªtefãnescu">
+<a href="/parlamentari/l2012/mari/Niculescu_Oana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Niculescu_Oana.jpg" border=0 width="150" alt="Oana Niculescu-Mizil ªtefãnescu"></a>
 <br>b.  11 aug. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Oana NICULESCU-MIZIL ªTEFÃNESCU</h1>
 <div class="page-actions">
