--- a/www.cdep.ro/6a83e6964a10fe8d2843102ed5ed2a978daf6c14.html
+++ b/www.cdep.ro/6a83e6964a10fe8d2843102ed5ed2a978daf6c14.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Culetu_Danut.jpg" border=0 width="150" alt="Dãnuþ Culeþu">
+<a href="/parlamentari/l2012/mari/Culetu_Danut.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Culetu_Danut.jpg" border=0 width="150" alt="Dãnuþ Culeþu"></a>
 <br>b.  16 sep. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dãnuþ CULEÞU</h1>
 <div class="page-actions">
