--- a/www.cdep.ro/45ec11e066fef4a6a1a2bfbf178c109ad2bdd38d.html
+++ b/www.cdep.ro/45ec11e066fef4a6a1a2bfbf178c109ad2bdd38d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dinita_Ion.jpg" border=0 width="150" alt="Ion Diniþã">
+<a href="/parlamentari/l2012/mari/Dinita_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dinita_Ion.jpg" border=0 width="150" alt="Ion Diniþã"></a>
 <br>b.  16 mar. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion DINIÞÃ</h1>
 <div class="page-actions">
