--- a/www.cdep.ro/d664fa08f0da024f61690d03752db62b36cfed0f.html
+++ b/www.cdep.ro/d664fa08f0da024f61690d03752db62b36cfed0f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Mocanu_Vasile.jpg" border=0 width="150" alt="Vasile Mocanu">
+<a href="/parlamentari/l2012/mari/Mocanu_Vasile.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mocanu_Vasile.jpg" border=0 width="150" alt="Vasile Mocanu"></a>
 <br>b.  27 sep. 1946
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vasile MOCANU</h1>
 <div class="page-actions">
