--- a/www.cdep.ro/19dc67031e6fec922a940759000b033b16199de1.html
+++ b/www.cdep.ro/19dc67031e6fec922a940759000b033b16199de1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/StanisoaraMihai.jpg" border=0 width="150" alt="Mihai Stãniºoarã">
+<a href="/parlamentari/l2012/mari/StanisoaraMihai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StanisoaraMihai.jpg" border=0 width="150" alt="Mihai Stãniºoarã"></a>
 <br>b.  11 jun. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai STÃNIªOARÃ</h1>
 <div class="page-actions">
