--- a/www.cdep.ro/bc9d421c22a8e1f91658d191efc681fc4d24e007.html
+++ b/www.cdep.ro/bc9d421c22a8e1f91658d191efc681fc4d24e007.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Bot_Octavian.jpg" border=1 width="150" alt="Octavian Bot">
+<a href="/parlamentari/l2012/mari/Bot_Octavian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bot_Octavian.jpg" border=1 width="150" alt="Octavian Bot"></a>
 <br>1951-2015
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Octavian BOT</h1>
 <div class="page-actions">
