--- a/www.cdep.ro/1722929c2d925468769058a6a883f8b4fd5fc1a1.html
+++ b/www.cdep.ro/1722929c2d925468769058a6a883f8b4fd5fc1a1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Vladoiu_Aurel.jpg" border=1 width="150" alt="Aurel Vlãdoiu">
+<a href="/parlamentari/l2012/mari/Vladoiu_Aurel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Vladoiu_Aurel.jpg" border=1 width="150" alt="Aurel Vlãdoiu"></a>
 <br>1948-2015
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Aurel VLÃDOIU</h1>
 <div class="page-actions">
