--- a/www.cdep.ro/e2f58c12b167e95bc543b2be69613454ff291b11.html
+++ b/www.cdep.ro/e2f58c12b167e95bc543b2be69613454ff291b11.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ghiveciu_Marian.jpg" border=0 width="150" alt="Marian Ghiveciu">
+<a href="/parlamentari/l2012/mari/Ghiveciu_Marian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ghiveciu_Marian.jpg" border=0 width="150" alt="Marian Ghiveciu"></a>
 <br>b.  15 apr. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Marian GHIVECIU</h1>
 <div class="page-actions">
