200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=3&leg=2012

--- a/www.cdep.ro/66eefe5a90f0a6d0fa1bfb37c825b837585ea8c5.html
+++ b/www.cdep.ro/66eefe5a90f0a6d0fa1bfb37c825b837585ea8c5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Adascalitei_Constantin.jpg" border=0 width="150" alt="Constantin Adãscãliþei">
+<a href="/parlamentari/l2012/mari/Adascalitei_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Adascalitei_Constantin.jpg" border=0 width="150" alt="Constantin Adãscãliþei"></a>
 <br>b.  18 sep. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin ADÃSCÃLIÞEI</h1>
 <div class="page-actions">
