--- a/www.cdep.ro/d3620703c12e3f6c27d53293bed281d205e39726.html
+++ b/www.cdep.ro/d3620703c12e3f6c27d53293bed281d205e39726.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Necula_Cosmin.jpg" border=0 width="150" alt="Cosmin Necula">
+<a href="/parlamentari/l2012/mari/Necula_Cosmin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Necula_Cosmin.jpg" border=0 width="150" alt="Cosmin Necula"></a>
 <br>b.  13 aug. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cosmin NECULA</h1>
 <div class="page-actions">
