--- a/www.cdep.ro/cf5e26e93f840b60acdd552b70add1ec51a6c474.html
+++ b/www.cdep.ro/cf5e26e93f840b60acdd552b70add1ec51a6c474.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Muntean_Mircia.jpg" border=0 width="150" alt="Mircia Muntean">
+<a href="/parlamentari/l2012/mari/Muntean_Mircia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Muntean_Mircia.jpg" border=0 width="150" alt="Mircia Muntean"></a>
 <br>b.  28 apr. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircia MUNTEAN</h1>
 <div class="page-actions">
