--- a/www.cdep.ro/8475438c7b7a5f70dfa7d1ba6e4f12644ef19b09.html
+++ b/www.cdep.ro/8475438c7b7a5f70dfa7d1ba6e4f12644ef19b09.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Boghicevici_Claudia.jpg" border=0 width="150" alt="Claudia Boghicevici">
+<a href="/parlamentari/l2012/mari/Boghicevici_Claudia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Boghicevici_Claudia.jpg" border=0 width="150" alt="Claudia Boghicevici"></a>
 <br>b.  11 oct. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Claudia BOGHICEVICI</h1>
 <div class="page-actions">
