--- a/www.cdep.ro/843f4509181c929516e7953ef64661d8d8ca4b20.html
+++ b/www.cdep.ro/843f4509181c929516e7953ef64661d8d8ca4b20.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Resmerita_Cornel.jpg" border=0 width="150" alt="Cornel-Cristian Resmeriþã">
+<a href="/parlamentari/l2012/mari/Resmerita_Cornel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Resmerita_Cornel.jpg" border=0 width="150" alt="Cornel-Cristian Resmeriþã"></a>
 <br>b.  26 jan. 1980
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cornel-Cristian RESMERIÞÃ</h1>
 <div class="page-actions">
