--- a/www.cdep.ro/ae4de37cc9ecd9aa5230dfb8645f7829289d6d15.html
+++ b/www.cdep.ro/ae4de37cc9ecd9aa5230dfb8645f7829289d6d15.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Roman_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Roman">
+<a href="/parlamentari/l2012/mari/Roman_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Roman_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Roman"></a>
 <br>b.  6 feb. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe ROMAN</h1>
 <div class="page-actions">
