200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=381&leg=2012

--- a/www.cdep.ro/8b0c5af4f8d2dc41dfe9f8811f8000bf00d2ff0b.html
+++ b/www.cdep.ro/8b0c5af4f8d2dc41dfe9f8811f8000bf00d2ff0b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TudoracheDaniel.jpg" border=0 width="150" alt="Daniel Tudorache">
+<a href="/parlamentari/l2012/mari/TudoracheDaniel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TudoracheDaniel.jpg" border=0 width="150" alt="Daniel Tudorache"></a>
 <br>b.  27 feb. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel TUDORACHE</h1>
 <div class="page-actions">
