--- a/www.cdep.ro/94c118a6157f80642338ac66c54cc0fae39e4aac.html
+++ b/www.cdep.ro/94c118a6157f80642338ac66c54cc0fae39e4aac.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Kereskenyi_Gabor.jpg" border=0 width="150" alt="Gábor Kereskényi">
+<a href="/parlamentari/l2012/mari/Kereskenyi_Gabor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Kereskenyi_Gabor.jpg" border=0 width="150" alt="Gábor Kereskényi"></a>
 <br>b.  29 jan. 1980
 </div><div class="boxTitle"><h1 style="line-height: 110%;">KERESKÉNYI Gábor</h1>
 <div class="page-actions">
