200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=178&leg=2012

--- a/www.cdep.ro/ab36a180ca8b9e784eed61677567541e1634c0ff.html
+++ b/www.cdep.ro/ab36a180ca8b9e784eed61677567541e1634c0ff.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Iliuta_Vasile.jpg" border=0 width="150" alt="Vasile Iliuþã">
+<a href="/parlamentari/l2012/mari/Iliuta_Vasile.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Iliuta_Vasile.jpg" border=0 width="150" alt="Vasile Iliuþã"></a>
 <br>b.  4 may 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vasile ILIUÞÃ</h1>
 <div class="page-actions">
