--- a/www.cdep.ro/c77568a6518f4e0b63a1a90d511afad01f2e3ca0.html
+++ b/www.cdep.ro/c77568a6518f4e0b63a1a90d511afad01f2e3ca0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Enache_Marian.jpg" border=0 width="150" alt="Marian Enache">
+<a href="/parlamentari/l2012/mari/Enache_Marian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Enache_Marian.jpg" border=0 width="150" alt="Marian Enache"></a>
 <br>b.  5 may 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Marian ENACHE</h1>
 <div class="page-actions">
