--- a/www.cdep.ro/8949e89fde240ea5dd022656f4f6461f3144998b.html
+++ b/www.cdep.ro/8949e89fde240ea5dd022656f4f6461f3144998b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Draghici_Sonia_Maria.jpg" border=1 width="150" alt="Sonia-Maria Drãghici">
+<a href="/parlamentari/l2012/mari/Draghici_Sonia_Maria.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Draghici_Sonia_Maria.jpg" border=1 width="150" alt="Sonia-Maria Drãghici"></a>
 <br>1956-2016
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Sonia-Maria DRÃGHICI</h1>
 <div class="page-actions">
