--- a/www.cdep.ro/bcc73a0218727438a6fcde1c66a501c7980e919f.html
+++ b/www.cdep.ro/bcc73a0218727438a6fcde1c66a501c7980e919f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Mircovici_Niculae.jpg" border=1 width="150" alt="Niculae Mircovici">
+<a href="/parlamentari/l2012/mari/Mircovici_Niculae.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mircovici_Niculae.jpg" border=1 width="150" alt="Niculae Mircovici"></a>
 <br>1950-2016
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Niculae MIRCOVICI</h1>
 <div class="page-actions">
