--- a/www.cdep.ro/1b2cf32cf3932f6da6999ef089d0450c8417a713.html
+++ b/www.cdep.ro/1b2cf32cf3932f6da6999ef089d0450c8417a713.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Mihailescu_Ion_Bogdan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mihailescu_Ion_Bogdan.jpg" border=0 width="150" alt="Ion-Bogdan Mihãilescu"></a>
+<img src="/parlamentari/l2012/Mihailescu_Ion_Bogdan.jpg" border=0 width="150" alt="Ion-Bogdan Mihãilescu">
 <br>b.  3 apr. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion-Bogdan MIHÃILESCU</h1>
 <div class="page-actions">
