200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=315&leg=2012

--- a/www.cdep.ro/948a665d1d6cdae91b1c6015afc73621a5d77d29.html
+++ b/www.cdep.ro/948a665d1d6cdae91b1c6015afc73621a5d77d29.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Roman_Ioan.jpg" border=0 width="150" alt="Ioan Sorin Roman">
+<a href="/parlamentari/l2012/mari/Roman_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Roman_Ioan.jpg" border=0 width="150" alt="Ioan Sorin Roman"></a>
 <br>b.  3 jul. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan Sorin ROMAN</h1>
 <div class="page-actions">
