--- a/www.cdep.ro/bae5f31b913689331aa226213b4d5b11c1d79639.html
+++ b/www.cdep.ro/bae5f31b913689331aa226213b4d5b11c1d79639.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Almajanu_Marin.jpg" border=0 width="150" alt="Marin Almãjanu">
+<a href="/parlamentari/l2012/mari/Almajanu_Marin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Almajanu_Marin.jpg" border=0 width="150" alt="Marin Almãjanu"></a>
 <br>b.  30 jun. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Marin ALMÃJANU</h1>
 <div class="page-actions">
