200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=33&leg=2012

--- a/www.cdep.ro/f48eb6e285503b5b62b50ed008587700336d8465.html
+++ b/www.cdep.ro/f48eb6e285503b5b62b50ed008587700336d8465.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Blanariu_Valentin.jpg" border=0 width="150" alt="Valentin Blãnariu">
+<a href="/parlamentari/l2012/mari/Blanariu_Valentin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Blanariu_Valentin.jpg" border=0 width="150" alt="Valentin Blãnariu"></a>
 <br>b.  26 may 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Valentin BLÃNARIU</h1>
 <div class="page-actions">
