--- a/www.cdep.ro/5590789126eaa00c6b6e6e634ed1a37e026dd290.html
+++ b/www.cdep.ro/5590789126eaa00c6b6e6e634ed1a37e026dd290.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Cazan_Mircea_Vasile.jpg" border=0 width="150" alt="Mircea-Vasile Cazan">
+<a href="/parlamentari/l2012/mari/Cazan_Mircea_Vasile.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cazan_Mircea_Vasile.jpg" border=0 width="150" alt="Mircea-Vasile Cazan"></a>
 <br>b.  1 jun. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea-Vasile CAZAN</h1>
 <div class="page-actions">
