--- a/www.cdep.ro/e90d0991778d62c7f7714d62b862464ea6b29c30.html
+++ b/www.cdep.ro/e90d0991778d62c7f7714d62b862464ea6b29c30.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Caprar_Dorel_Gheorghe.jpg" border=0 width="150" alt="Dorel-Gheorghe Cãprar">
+<a href="/parlamentari/l2012/mari/Caprar_Dorel_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Caprar_Dorel_Gheorghe.jpg" border=0 width="150" alt="Dorel-Gheorghe Cãprar"></a>
 <br>b.  6 aug. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dorel-Gheorghe CÃPRAR</h1>
 <div class="page-actions">
