200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=63&leg=2012

--- a/www.cdep.ro/0edcf263e009e13b8ee7c7f80b7ee58527dfd7ce.html
+++ b/www.cdep.ro/0edcf263e009e13b8ee7c7f80b7ee58527dfd7ce.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Chirvasuta_Laurentiu.jpg" border=0 width="150" alt="Laurenþiu Chirvãsuþã">
+<a href="/parlamentari/l2012/mari/Chirvasuta_Laurentiu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Chirvasuta_Laurentiu.jpg" border=0 width="150" alt="Laurenþiu Chirvãsuþã"></a>
 <br>b.  5 jan. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Laurenþiu CHIRVÃSUÞÃ</h1>
 <div class="page-actions">
