200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=69&leg=2012

--- a/www.cdep.ro/2c429010e59810f3d179393fb8a736e43acafb68.html
+++ b/www.cdep.ro/2c429010e59810f3d179393fb8a736e43acafb68.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ciofu_Tamara.jpg" border=0 width="150" alt="Tamara-Dorina Ciofu">
+<a href="/parlamentari/l2012/mari/Ciofu_Tamara.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ciofu_Tamara.jpg" border=0 width="150" alt="Tamara-Dorina Ciofu"></a>
 <br>b.  30 dec. 1957
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Tamara-Dorina CIOFU</h1>
 <div class="page-actions">
