--- a/www.cdep.ro/8df3ab0bafd3c8c50731fe145ee5fb78e3bd1712.html
+++ b/www.cdep.ro/8df3ab0bafd3c8c50731fe145ee5fb78e3bd1712.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Cozmanciuc_Corneliu_Mugurel.jpg" border=0 width="150" alt="Corneliu-Mugurel Cozmanciuc">
+<a href="/parlamentari/l2012/mari/Cozmanciuc_Corneliu_Mugurel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cozmanciuc_Corneliu_Mugurel.jpg" border=0 width="150" alt="Corneliu-Mugurel Cozmanciuc"></a>
 <br>b.  9 may 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Corneliu-Mugurel COZMANCIUC</h1>
 <div class="page-actions">
