200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=109&leg=2012

--- a/www.cdep.ro/075d21c3064a426ebe9ec5bc312f5afaa04afaa1.html
+++ b/www.cdep.ro/075d21c3064a426ebe9ec5bc312f5afaa04afaa1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dolineaschi_Andrei.jpg" border=0 width="150" alt="Andrei Dolineaschi">
+<a href="/parlamentari/l2012/mari/Dolineaschi_Andrei.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dolineaschi_Andrei.jpg" border=0 width="150" alt="Andrei Dolineaschi"></a>
 <br>b.  21 jun. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Andrei DOLINEASCHI</h1>
 <div class="page-actions">
