--- a/www.cdep.ro/0b96305b6dbf58a02a0219d66b450f8857106847.html
+++ b/www.cdep.ro/0b96305b6dbf58a02a0219d66b450f8857106847.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Draghici_Mircea_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Draghici_Mircea_Gheorghe.jpg" border=0 width="150" alt="Mircea-Gheorghe Drãghici"></a>
+<img src="/parlamentari/l2012/Draghici_Mircea_Gheorghe.jpg" border=0 width="150" alt="Mircea-Gheorghe Drãghici">
 <br>b.  8 apr. 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea-Gheorghe DRÃGHICI</h1>
 <div class="page-actions">
