--- a/www.cdep.ro/1c4ea2cead0e56de9fd41eca311e846639a793dc.html
+++ b/www.cdep.ro/1c4ea2cead0e56de9fd41eca311e846639a793dc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Florea_Damian.jpg" border=0 width="150" alt="Damian Florea">
+<a href="/parlamentari/l2012/mari/Florea_Damian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Florea_Damian.jpg" border=0 width="150" alt="Damian Florea"></a>
 <br>b.  12 jul. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Damian FLOREA</h1>
 <div class="page-actions">
