--- a/www.cdep.ro/9598192461c8592e261941945ac082119915806c.html
+++ b/www.cdep.ro/9598192461c8592e261941945ac082119915806c.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Gaina_Mihaita.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gaina_Mihaita.jpg" border=0 width="150" alt="Mihãiþã Gãinã"></a>
+<img src="/parlamentari/l2012/Gaina_Mihaita.jpg" border=0 width="150" alt="Mihãiþã Gãinã">
 <br>b.  17 sep. 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihãiþã GÃINÃ</h1>
 <div class="page-actions">
