--- a/www.cdep.ro/b62c75554c1b1f749208fd9bbce56fdd618fab65.html
+++ b/www.cdep.ro/b62c75554c1b1f749208fd9bbce56fdd618fab65.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Gheorghe_Tinel.jpg" border=0 width="150" alt="Tinel Gheorghe">
+<a href="/parlamentari/l2012/mari/Gheorghe_Tinel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gheorghe_Tinel.jpg" border=0 width="150" alt="Tinel Gheorghe"></a>
 <br>b.  22 jan. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Tinel GHEORGHE</h1>
 <div class="page-actions">
