--- a/www.cdep.ro/36135efffdff8ec87654e3103f3c66352b1b05b5.html
+++ b/www.cdep.ro/36135efffdff8ec87654e3103f3c66352b1b05b5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Khraibani_Camelia.jpg" border=0 width="150" alt="Camelia Khraibani">
+<a href="/parlamentari/l2012/mari/Khraibani_Camelia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Khraibani_Camelia.jpg" border=0 width="150" alt="Camelia Khraibani"></a>
 <br>b.  23 sep. 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Camelia KHRAIBANI</h1>
 <div class="page-actions">
