200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=413&leg=2012

--- a/www.cdep.ro/489be7d5fad2986bdcd5b8a7b89f82dd408adfe4.html
+++ b/www.cdep.ro/489be7d5fad2986bdcd5b8a7b89f82dd408adfe4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/MarinLaura.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/MarinLaura.jpg" border=0 width="150" alt="Laura Marin"></a>
+<img src="/parlamentari/l2012/MarinLaura.jpg" border=0 width="150" alt="Laura Marin">
 <br>b.  20 aug. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Laura MARIN</h1>
 <div class="page-actions">
