--- a/www.cdep.ro/5d80ff336d2b068480f2a5a90b31e6530945e43f.html
+++ b/www.cdep.ro/5d80ff336d2b068480f2a5a90b31e6530945e43f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Moldovan_Iosif.jpg" border=0 width="150" alt="Iosif Moldovan">
+<a href="/parlamentari/l2012/mari/Moldovan_Iosif.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Moldovan_Iosif.jpg" border=0 width="150" alt="Iosif Moldovan"></a>
 <br>b.  21 apr. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">MOLDOVAN Iosif</h1>
 <div class="page-actions">
