--- a/www.cdep.ro/cb3c1673ef1f954f736671d3cee661be67a9d638.html
+++ b/www.cdep.ro/cb3c1673ef1f954f736671d3cee661be67a9d638.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Murgu_Neagu.jpg" border=0 width="150" alt="Neagu Murgu">
+<a href="/parlamentari/l2012/mari/Murgu_Neagu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Murgu_Neagu.jpg" border=0 width="150" alt="Neagu Murgu"></a>
 <br>b.  1 aug. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Neagu MURGU</h1>
 <div class="page-actions">
