--- a/www.cdep.ro/c77cf3ff54cb5904445ac0d2cbd85181fd095973.html
+++ b/www.cdep.ro/c77cf3ff54cb5904445ac0d2cbd85181fd095973.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nistor_Gheorghe_Vlad.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nistor_Gheorghe_Vlad.jpg" border=0 width="150" alt="Gheorghe-Vlad Nistor"></a>
+<img src="/parlamentari/l2012/Nistor_Gheorghe_Vlad.jpg" border=0 width="150" alt="Gheorghe-Vlad Nistor">
 <br>b.  25 jul. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe-Vlad NISTOR</h1>
 <div class="page-actions">
