--- a/www.cdep.ro/9448ba4e8cb809094bb6409b08dc504cb3c57ecf.html
+++ b/www.cdep.ro/9448ba4e8cb809094bb6409b08dc504cb3c57ecf.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Pocora_Cristina_Ancuta.jpg" border=0 width="150" alt="Cristina-Ancuþa Pocora">
+<a href="/parlamentari/l2012/mari/Pocora_Cristina_Ancuta.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Pocora_Cristina_Ancuta.jpg" border=0 width="150" alt="Cristina-Ancuþa Pocora"></a>
 <br>b.  5 apr. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cristina-Ancuþa POCORA</h1>
 <div class="page-actions">
