200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=304&leg=2012

--- a/www.cdep.ro/2d2cfe518710fc52cb48c069d66203b8cf4ac1b3.html
+++ b/www.cdep.ro/2d2cfe518710fc52cb48c069d66203b8cf4ac1b3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Puscas_Iacob.jpg" border=0 width="150" alt="Iacob Puºcaº">
+<a href="/parlamentari/l2012/mari/Puscas_Iacob.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Puscas_Iacob.jpg" border=0 width="150" alt="Iacob Puºcaº"></a>
 <br>b.  18 jan. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Iacob PUªCAª</h1>
 <div class="page-actions">
