--- a/www.cdep.ro/f90b554fecb7556a096eefe61253babc5f214ae2.html
+++ b/www.cdep.ro/f90b554fecb7556a096eefe61253babc5f214ae2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Rosca_Mircea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Rosca_Mircea.jpg" border=0 width="150" alt="Mircea Roºca"></a>
+<img src="/parlamentari/l2012/Rosca_Mircea.jpg" border=0 width="150" alt="Mircea Roºca">
 <br>b.  25 feb. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea ROªCA</h1>
 <div class="page-actions">
