--- a/www.cdep.ro/9cb81a9268cd97b1d7af9d5c5de94b46a770d621.html
+++ b/www.cdep.ro/9cb81a9268cd97b1d7af9d5c5de94b46a770d621.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Rotaru_Razvan.jpg" border=0 width="150" alt="Rãzvan Rotaru">
+<a href="/parlamentari/l2012/mari/Rotaru_Razvan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Rotaru_Razvan.jpg" border=0 width="150" alt="Rãzvan Rotaru"></a>
 <br>b.  3 jul. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Rãzvan ROTARU</h1>
 <div class="page-actions">
