--- a/www.cdep.ro/b53d69b4b0b293377a711ed35da9a90e57505b96.html
+++ b/www.cdep.ro/b53d69b4b0b293377a711ed35da9a90e57505b96.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/ScarlatGeorge.jpg" border=0 width="150" alt="George Scarlat">
+<a href="/parlamentari/l2012/mari/ScarlatGeorge.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/ScarlatGeorge.jpg" border=0 width="150" alt="George Scarlat"></a>
 <br>b.  5 may 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">George SCARLAT</h1>
 <div class="page-actions">
