--- a/www.cdep.ro/0acb50679344cce9cf64ecd9c6f314f1b7f860e7.html
+++ b/www.cdep.ro/0acb50679344cce9cf64ecd9c6f314f1b7f860e7.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SecaraFlorinMihail.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SecaraFlorinMihail.jpg" border=0 width="150" alt="Florin Mihail Secarã"></a>
+<img src="/parlamentari/l2012/SecaraFlorinMihail.jpg" border=0 width="150" alt="Florin Mihail Secarã">
 <br>b.  11 aug. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florin Mihail SECARÃ</h1>
 <div class="page-actions">
