200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=332&leg=2012

--- a/www.cdep.ro/94d99379bae584f027834a14ce88c69b0a755526.html
+++ b/www.cdep.ro/94d99379bae584f027834a14ce88c69b0a755526.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Seres_Denes.jpg" border=0 width="150" alt="Dénes Seres">
+<a href="/parlamentari/l2012/mari/Seres_Denes.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Seres_Denes.jpg" border=0 width="150" alt="Dénes Seres"></a>
 <br>b.  21 jul. 1953
 </div><div class="boxTitle"><h1 style="line-height: 110%;">SERES Dénes</h1>
 <div class="page-actions">
