--- a/www.cdep.ro/44eb5a265b6121cf79ddc9f5ce7060e356a32022.html
+++ b/www.cdep.ro/44eb5a265b6121cf79ddc9f5ce7060e356a32022.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/StancuIonel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StancuIonel.jpg" border=0 width="150" alt="Ionel Stancu"></a>
+<img src="/parlamentari/l2012/StancuIonel.jpg" border=0 width="150" alt="Ionel Stancu">
 <br>b.  15 oct. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ionel STANCU</h1>
 <div class="page-actions">
