--- a/www.cdep.ro/12dcc53c16ed5519ead1d614bf0b5ca884952536.html
+++ b/www.cdep.ro/12dcc53c16ed5519ead1d614bf0b5ca884952536.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/SopticaCostel.jpg" border=0 width="150" alt="Costel ªopticã">
+<a href="/parlamentari/l2012/mari/SopticaCostel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SopticaCostel.jpg" border=0 width="150" alt="Costel ªopticã"></a>
 <br>b.  18 feb. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Costel ªOPTICÃ</h1>
 <div class="page-actions">
