--- a/www.cdep.ro/4825b5753907a14a1f3fc6327c585d8bc9194744.html
+++ b/www.cdep.ro/4825b5753907a14a1f3fc6327c585d8bc9194744.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Tataru_Florin-Cristian.jpg" border=0 width="150" alt="Florin-Cristian Tãtaru">
+<a href="/parlamentari/l2012/mari/Tataru_Florin-Cristian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Tataru_Florin-Cristian.jpg" border=0 width="150" alt="Florin-Cristian Tãtaru"></a>
 <br>b.  5 dec. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florin-Cristian TÃTARU</h1>
 <div class="page-actions">
