--- a/www.cdep.ro/e91aabaa7d1e1acf005b5b6e662ff2a64f40707f.html
+++ b/www.cdep.ro/e91aabaa7d1e1acf005b5b6e662ff2a64f40707f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TiuchCatalin.jpg" border=0 width="150" alt="Cãtãlin Tiuch">
+<a href="/parlamentari/l2012/mari/TiuchCatalin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TiuchCatalin.jpg" border=0 width="150" alt="Cãtãlin Tiuch"></a>
 <br>b.  1 nov. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cãtãlin TIUCH</h1>
 <div class="page-actions">
