200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=383&leg=2012

--- a/www.cdep.ro/09b0cbd1c6d1a06b648aa7f3c0b9e096dbddd015.html
+++ b/www.cdep.ro/09b0cbd1c6d1a06b648aa7f3c0b9e096dbddd015.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TudoseMihai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TudoseMihai.jpg" border=0 width="150" alt="Mihai Tudose"></a>
+<img src="/parlamentari/l2012/TudoseMihai.jpg" border=0 width="150" alt="Mihai Tudose">
 <br>b.  6 mar. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai TUDOSE</h1>
 <div class="page-actions">
