200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=384&leg=2012

--- a/www.cdep.ro/fff4d0b04691fad4920aa1568f8613e96c338b8e.html
+++ b/www.cdep.ro/fff4d0b04691fad4920aa1568f8613e96c338b8e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TurcanRaluca.jpg" border=0 width="150" alt="Raluca Turcan">
+<a href="/parlamentari/l2012/mari/TurcanRaluca.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TurcanRaluca.jpg" border=0 width="150" alt="Raluca Turcan"></a>
 <br>b.  2 apr. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Raluca TURCAN</h1>
 <div class="page-actions">
