200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=392&leg=2012

--- a/www.cdep.ro/b6c92e6ab562148d43eff924ecb7ef6821c780e3.html
+++ b/www.cdep.ro/b6c92e6ab562148d43eff924ecb7ef6821c780e3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Uricec_Eugen_Constantin.jpg" border=0 width="150" alt="Eugen Constantin Uricec">
+<a href="/parlamentari/l2012/mari/Uricec_Eugen_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Uricec_Eugen_Constantin.jpg" border=0 width="150" alt="Eugen Constantin Uricec"></a>
 <br>b.  10 may 1958
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eugen Constantin URICEC</h1>
 <div class="page-actions">
