--- a/www.cdep.ro/2d7639014f423629f34d4345fe9d0af13421aeb9.html
+++ b/www.cdep.ro/2d7639014f423629f34d4345fe9d0af13421aeb9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Zlati_Radu.jpg" border=0 width="150" alt="Radu Zlati">
+<a href="/parlamentari/l2012/mari/Zlati_Radu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Zlati_Radu.jpg" border=0 width="150" alt="Radu Zlati"></a>
 <br>b.  28 may 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Radu ZLATI</h1>
 <div class="page-actions">
