200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=34&leg=2012

--- a/www.cdep.ro/3662f23e23309ad28b7b0f24108ae4acf879dbb3.html
+++ b/www.cdep.ro/3662f23e23309ad28b7b0f24108ae4acf879dbb3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Bleotu_Vasile.jpg" border=0 width="150" alt="Vasile Bleotu">
+<a href="/parlamentari/l2012/mari/Bleotu_Vasile.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bleotu_Vasile.jpg" border=0 width="150" alt="Vasile Bleotu"></a>
 <br>b.  2 apr. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vasile BLEOTU</h1>
 <div class="page-actions">
