--- a/www.cdep.ro/b26ef5524f18fa10b6ba8692282947ed01aa6f02.html
+++ b/www.cdep.ro/b26ef5524f18fa10b6ba8692282947ed01aa6f02.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Moldovan_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Moldovan_Ioan.jpg" border=0 width="150" alt="Ioan Moldovan"></a>
+<img src="/parlamentari/l2012/Moldovan_Ioan.jpg" border=0 width="150" alt="Ioan Moldovan">
 <br>b.  26 jan. 1951
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan MOLDOVAN</h1>
 <div class="page-actions">
