--- a/www.cdep.ro/5b74b45111c831c244d1cf813da621913d167ce9.html
+++ b/www.cdep.ro/5b74b45111c831c244d1cf813da621913d167ce9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Roman_Victor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Roman_Victor.jpg" border=0 width="150" alt="Victor Roman"></a>
+<img src="/parlamentari/l2012/Roman_Victor.jpg" border=0 width="150" alt="Victor Roman">
 <br>b.  1 nov. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Victor ROMAN</h1>
 <div class="page-actions">
