200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=4&leg=2012

--- a/www.cdep.ro/227c632683ee22e9a1779bfaa304b23feac398d9.html
+++ b/www.cdep.ro/227c632683ee22e9a1779bfaa304b23feac398d9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Alexe_Costel.jpg" border=0 width="150" alt="Costel Alexe">
+<a href="/parlamentari/l2012/mari/Alexe_Costel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Alexe_Costel.jpg" border=0 width="150" alt="Costel Alexe"></a>
 <br>b.  20 aug. 1983
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Costel ALEXE</h1>
 <div class="page-actions">
