--- a/www.cdep.ro/aac7d380a55b03241149e34475054c33bad83c1b.html
+++ b/www.cdep.ro/aac7d380a55b03241149e34475054c33bad83c1b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Catanicioiu_Steluta_Gustica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Catanicioiu_Steluta_Gustica.jpg" border=0 width="150" alt="Steluþa-Gustica Cãtãniciu"></a>
+<img src="/parlamentari/l2012/Catanicioiu_Steluta_Gustica.jpg" border=0 width="150" alt="Steluþa-Gustica Cãtãniciu">
 <br>b.  19 feb. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Steluþa-Gustica CÃTÃNICIU</h1>
 <div class="page-actions">
