--- a/www.cdep.ro/bc9bc10edc9fd4218a876a0cc31e7df76ba88dc9.html
+++ b/www.cdep.ro/bc9bc10edc9fd4218a876a0cc31e7df76ba88dc9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Fenechiu_Catalin_Daniel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Fenechiu_Catalin_Daniel.jpg" border=0 width="150" alt="Cãtãlin-Daniel Fenechiu"></a>
+<img src="/parlamentari/l2012/Fenechiu_Catalin_Daniel.jpg" border=0 width="150" alt="Cãtãlin-Daniel Fenechiu">
 <br>b.  20 nov. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cãtãlin-Daniel FENECHIU</h1>
 <div class="page-actions">
