200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=235&leg=2012

--- a/www.cdep.ro/a6c22172691bf9a034195f5b5eea02c4bf90c184.html
+++ b/www.cdep.ro/a6c22172691bf9a034195f5b5eea02c4bf90c184.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Molnar_Zsolt.jpg" border=0 width="150" alt="Zsolt Molnar">
+<a href="/parlamentari/l2012/mari/Molnar_Zsolt.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Molnar_Zsolt.jpg" border=0 width="150" alt="Zsolt Molnar"></a>
 <br>b.  23 aug. 1983
 </div><div class="boxTitle"><h1 style="line-height: 110%;">MOLNAR Zsolt</h1>
 <div class="page-actions">
