200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=324&leg=2012

--- a/www.cdep.ro/da3f3a65770997dd9d564a840567395c1a0361de.html
+++ b/www.cdep.ro/da3f3a65770997dd9d564a840567395c1a0361de.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SamartineanCornelMircea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SamartineanCornelMircea.jpg" border=0 width="150" alt="Cornel-Mircea Sãmãrtinean"></a>
+<img src="/parlamentari/l2012/SamartineanCornelMircea.jpg" border=0 width="150" alt="Cornel-Mircea Sãmãrtinean">
 <br>b.  2 dec. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cornel-Mircea SÃMÃRTINEAN</h1>
 <div class="page-actions">
