200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=340&leg=2012

--- a/www.cdep.ro/1012a7b4eb48820581bbe3ccb7abd24f42d12cab.html
+++ b/www.cdep.ro/1012a7b4eb48820581bbe3ccb7abd24f42d12cab.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Stanciu_Anghel.jpg" border=0 width="150" alt="Anghel Stanciu">
+<a href="/parlamentari/l2012/mari/Stanciu_Anghel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Stanciu_Anghel.jpg" border=0 width="150" alt="Anghel Stanciu"></a>
 <br>b.  15 aug. 1949
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Anghel STANCIU</h1>
 <div class="page-actions">
