200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=407&leg=2012

--- a/www.cdep.ro/9117805ccbd7b94be9ee907b3b0f67eac033e33b.html
+++ b/www.cdep.ro/9117805ccbd7b94be9ee907b3b0f67eac033e33b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Weber_Mihai.jpg" border=0 width="150" alt="Mihai Weber">
+<a href="/parlamentari/l2012/mari/Weber_Mihai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Weber_Mihai.jpg" border=0 width="150" alt="Mihai Weber"></a>
 <br>b.  18 nov. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai WEBER</h1>
 <div class="page-actions">
