200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=249&leg=2012

--- a/www.cdep.ro/18ec785d14caea822345dabab4713926992dadef.html
+++ b/www.cdep.ro/18ec785d14caea822345dabab4713926992dadef.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Netoiu_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Neþoiu">
+<a href="/parlamentari/l2012/mari/Netoiu_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Netoiu_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Neþoiu"></a>
 <br>b.  1 aug. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe NEÞOIU</h1>
 <div class="page-actions">
