200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=339&leg=2012

--- a/www.cdep.ro/e843ac1d8b9972c78f50637e6b0cbac68c2548c3.html
+++ b/www.cdep.ro/e843ac1d8b9972c78f50637e6b0cbac68c2548c3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/StanIon.jpg" border=0 width="150" alt="Ion Stan">
+<a href="/parlamentari/l2012/mari/StanIon.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StanIon.jpg" border=0 width="150" alt="Ion Stan"></a>
 <br>b.  13 aug. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion STAN</h1>
 <div class="page-actions">
