200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=264&leg=2012

--- a/www.cdep.ro/b3a7aec8c441acf44a73cac1ca77558c231685cc.html
+++ b/www.cdep.ro/b3a7aec8c441acf44a73cac1ca77558c231685cc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Nistor_Laurentiu.jpg" border=0 width="150" alt="Laurenþiu Nistor">
+<a href="/parlamentari/l2012/mari/Nistor_Laurentiu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nistor_Laurentiu.jpg" border=0 width="150" alt="Laurenþiu Nistor"></a>
 <br>b.  29 jun. 1951
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Laurenþiu NISTOR</h1>
 <div class="page-actions">
