200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=88&leg=2012

--- a/www.cdep.ro/7a0bf58d3378201d3178721cd474dcf81e43aacc.html
+++ b/www.cdep.ro/7a0bf58d3378201d3178721cd474dcf81e43aacc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Cristian_Horia.jpg" border=0 width="150" alt="Horia Cristian">
+<a href="/parlamentari/l2012/mari/Cristian_Horia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cristian_Horia.jpg" border=0 width="150" alt="Horia Cristian"></a>
 <br>b.  31 aug. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Horia CRISTIAN</h1>
 <div class="page-actions">
