200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=106&leg=2012

--- a/www.cdep.ro/7d35db3635b43bdff148c1d6027e6b6a0478b9ea.html
+++ b/www.cdep.ro/7d35db3635b43bdff148c1d6027e6b6a0478b9ea.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dobrinescu_Traian.jpg" border=0 width="150" alt="Traian Dobrinescu">
+<a href="/parlamentari/l2012/mari/Dobrinescu_Traian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dobrinescu_Traian.jpg" border=0 width="150" alt="Traian Dobrinescu"></a>
 <br>b.  23 may 1949
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Traian DOBRINESCU</h1>
 <div class="page-actions">
