200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=209&leg=2012

--- a/www.cdep.ro/c7cffe5c26731a57f7cdbf264d5fab7b724a4501.html
+++ b/www.cdep.ro/c7cffe5c26731a57f7cdbf264d5fab7b724a4501.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Martin_Eduard_Stelian.jpg" border=0 width="150" alt="Eduard-Stelian Martin">
+<a href="/parlamentari/l2012/mari/Martin_Eduard_Stelian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Martin_Eduard_Stelian.jpg" border=0 width="150" alt="Eduard-Stelian Martin"></a>
 <br>b.  13 dec. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eduard-Stelian MARTIN</h1>
 <div class="page-actions">
