200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=210&leg=2012

--- a/www.cdep.ro/b41bc9e06a6155b930f4b25cd2c826f4fef029ee.html
+++ b/www.cdep.ro/b41bc9e06a6155b930f4b25cd2c826f4fef029ee.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Marton_Arpad_Francisc.jpg" border=0 width="150" alt="Árpád-Francisc Márton">
+<a href="/parlamentari/l2012/mari/Marton_Arpad_Francisc.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Marton_Arpad_Francisc.jpg" border=0 width="150" alt="Árpád-Francisc Márton"></a>
 <br>b.  25 mar. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">MÁRTON Árpád-Francisc</h1>
 <div class="page-actions">
