200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=231&leg=2012

--- a/www.cdep.ro/b23c9bd0511e1f56720481c1e5627dfb3c50cc4c.html
+++ b/www.cdep.ro/b23c9bd0511e1f56720481c1e5627dfb3c50cc4c.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Moisii_Constantin.jpg" border=0 width="150" alt="Constantin Moisii">
+<a href="/parlamentari/l2012/mari/Moisii_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Moisii_Constantin.jpg" border=0 width="150" alt="Constantin Moisii"></a>
 <br>b.  30 nov. 1952
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin MOISII</h1>
 <div class="page-actions">
